# OR2-2025-2026

./: .gitignore  CMakeLists.txt  Makefile  README.md  perfprof3.py
docs/: 2opt_implementation.md  api_reference.md  cplex_implementation.md  cplex_implementation_2.md  genetic_algorithm.md  implementation.md  vns_implementation.md
include/: 2_opt.h  Genetic.h  greedyNN.h  solver.h  structures.h  utilities.h  vns.h  vrp.h
include/construction/: NearestN.h  construction.h  greedyNN.h
include/core/: solve_with_cplex.h  structures.h  utilities.h
include/heuristics/: 2_opt.h
include/matheuristics/: matheuristic.h
include/metaheuristics/: Genetic.h  tabu.h  vns.h
include/modules/: solver.h
src/: greedyNN.c  main.c
src/common/: 2_opt.c  Genetic.c  utilities.c  vns.c
src/construction/: NearestN.c  construction.c  greedyNN.c
src/core/: solve_with_cplex.c  utilities.c
src/heuristics/: 2_opt.c
src/matheuristics/: matheuristic.c
src/methaheuristics/: Genetic.c  tabu.c  vns.c
src/modules/: solver.c
src/vrp/: main.c  vrp.c
